# src/main/java/com/petlink/member/controller/AuthenticationController.java
@@ -1,10 +1,8 @@
 package com.petlink.member.controller;
 
-import com.petlink.common.util.jwt.JwtToken;
 import com.petlink.member.dto.request.LoginRequest;
 import com.petlink.member.dto.response.LoginResponse;
 import com.petlink.member.service.AuthenticationService;
-import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -27,23 +25,14 @@ public class AuthenticationController {
     @PostMapping("/login")
     public ResponseEntity<LoginResponse> login(@RequestBody @Valid LoginRequest loginRequest,
                                                HttpServletResponse response) {
-
         String token = authenticationService.login(loginRequest.getEmail(), loginRequest.getPassword());
-
-        Cookie cookie = new Cookie(JwtToken.JWT_TOKEN.getTokenName(), token);
-        cookie.setMaxAge(3600);
-        cookie.setPath("/");
-        response.addCookie(cookie);
+        response.setHeader("Authorization", "Bearer " + token);
         return new ResponseEntity<>(new LoginResponse(token), HttpStatus.OK);
     }
 
     @PostMapping("/logout")
     public ResponseEntity<Void> logout(HttpServletResponse response) {
-
-        Cookie cookie = new Cookie(JwtToken.JWT_TOKEN.getTokenName(), null);
-        cookie.setMaxAge(0);
-        cookie.setPath("/");
-        response.addCookie(cookie);
+        response.setHeader("Authorization", null);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 }
